# react-native-queue-it

./: .gitignore  .npmignore  CONTRIBUTING.md  LICENSE  README.md  azure-pipelines.yml  package-lock.json  package.json  react-native-queue-it.podspec  tsconfig.json
.github/workflows/: npm-publish.yml
android/: .project  build.gradle  gradle.properties
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/include/folly/: folly-config.h
android/src/main/java/com/reactnativequeueit/: QueueItModule.kt  QueueItPackage.kt
android/src/main/jni/: CMakeLists.txt  OnLoad.cpp  placeholder.cpp
android/src/newarch/java/com/: QueueIt.kt
android/src/oldarch/java/com/: QueueIt.kt
documentation/: ReactNative16kbComplianceInstructions.md
example/: README.md  app.json  babel.config.js  metro.config.js  package-lock.json  package.json  react-native.config.js  tsconfig.json
example-expo-app/: README.md  app.json  package-lock.json  package.json
example-expo-app/plugins/: withQueueItAllowBackup.js
example-expo-app/src/app/: Qit.tsx  index.tsx
example/android/: .project  build.gradle  gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativequeueit/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativequeueit/: MainActivity.java  MainActivity.kt  MainApplication.java  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/: File.swift  Podfile
example/ios/QueueItExample/: AppDelegate.m  Info.plist
example/ios/QueueItExample.xcodeproj/: project.pbxproj
example/ios/QueueItExample.xcodeproj/xcshareddata/xcschemes/: QueueItExample.xcscheme
example/ios/QueueItExample.xcworkspace/: contents.xcworkspacedata
example/ios/QueueItExample/Base.lproj/: LaunchScreen.xib
example/src/: App.tsx
exampleApp/: App.tsx  Qit.tsx  README.md  metro.config.js  package-lock.json  package.json  tsconfig.json
exampleApp/android/: gradle.properties  settings.gradle
exampleApp/android/app/: build.gradle
exampleApp/android/app/src/main/java/com/exampleapp/: MainApplication.kt
exampleApp/android/gradle/: libs.versions.toml
exampleApp/ios/: .xcode.env.local  Podfile
exampleApp/ios/exampleApp/: AppDelegate.swift  Info.plist
exampleApp/ios/exampleApp.xcodeproj/: project.pbxproj
ios/: Podfile  QueueIt.h  QueueIt.m  QueueIt.mm  RNQueueitWebview.h  RNQueueitWebview.mm  RNQueueitWebviewManager.h  RNQueueitWebviewManager.mm
ios/QueueIt.xcodeproj/: project.pbxproj
ios/QueueIt.xcodeproj/xcshareddata/xcschemes/: QueueIt.xcscheme
ios/QueueIt.xcworkspace/: contents.xcworkspacedata
pipelines/: release.yml
src/: index.tsx  view.tsx
src/specs/: NativeQueueIt.ts
